# liberty-social

./: .gitignore  ADMIN_ANALYTICS_IMPLEMENTATION.md  ANALYTICS_ROUTES_FIXED.md  ANALYTICS_SETUP_COMPLETE.md  API_ENDPOINT_FIX_SUMMARY.md  API_FIXES_COMPREHENSIVE.md  AUTH_SYSTEM_TODO.txt  AWS_ECS_DEPLOYMENT_READINESS.md  BACKEND_CALL_REQUIREMENTS.md  BACKEND_DEPLOYMENT_CHECKLIST.md  BACKEND_IMPLEMENTATION_COMPLETE.md  BEFORE_AFTER_CHANGES.md  CALL_FEATURES_IMPLEMENTATION.md  DEMO_DATA_MANAGEMENT.md  DEPLOY_NOW.md  EMAIL_IMPLEMENTATION_SUMMARY.txt  FEATURES_PAGE_IMAGE_MANAGEMENT.md  FEED_FILTERING_GUIDE.md  FEED_FILTERING_IMPLEMENTATION.md  FEED_FILTERS_REBUILD.md  FEED_FILTER_DEBUGGING.md  FEED_FILTER_FIX_COMPLETE.md  FIXES_PAGE_DETAIL_STYLING.md  FIX_COMPLETE.md  FIX_SIGNING_KEY.md  FRIEND_CHANGES_IMPLEMENTATION_COMPLETE.md  FRIEND_CHANGES_TROUBLESHOOTING.md  FRONTEND_CALL_TESTING.md  FRONTEND_READY_CHECKLIST.md  GLOBAL_CALLS_READY_TO_DEPLOY.md  IMAGE_UPLOAD_FIX.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_PAGE_IMAGE.md  INTEGRATION_COMPLETE.md  LOCATION_TRACKING_IMPLEMENTATION.md  LOCATION_TRACKING_QUICK_START.md  MARKETPLACE_API_ENDPOINTS.md  MARKETPLACE_COMPLETE.md  MARKETPLACE_EMAIL_NOTIFICATIONS.md  MARKETPLACE_IMPLEMENTATION_STATUS.md  (+40 more)
backend/: .dockerignore  .gitignore  00_START_HERE.md  =1.2.1  ANIMAL_API_QUICK_REFERENCE.md  ANIMAL_MARKETPLACE_BACKEND_SETUP.md  ANIMAL_MARKETPLACE_DOCS.md  AWS_RESOURCES_REFERENCE.md  BACKEND_VERIFICATION_COMPLETE.md  CELERY_WORKER_ENV_VARS.md  COMPLETE_CHECKLIST.md  COMPLETION_REPORT.txt  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_OVERVIEW.md  DEPLOY_GLOBAL_CALLS.md  DOCKER_BUILD_DEBUGGING.md  DOCKER_DEPLOYMENT.md  DOCKER_QUICK_REFERENCE.md  DOCKER_SETUP_SUMMARY.md  Dockerfile  FINAL_MANIFEST.md  IMPLEMENTATION_VERIFICATION.md  INTEGRATION.md  PASSKEY_IMPLEMENTATION.md  QUICK_DEPLOY.md  QUICK_START.md  README.md  README_ANIMAL_MARKETPLACE.md  TEST_PASSKEYS.md  check_call_logs.sh  debug_posts.py  deploy-ecs.sh  deploy.sh  diagnose_user_login.py  docker-compose.yml  docker-entrypoint.sh  ecs-task-definition-api.json  ecs-task-definition.json  manage.py  pyproject.toml  (+10 more)
backend/liberty_social/: __init__.py  asgi.py  auth.py  celery.py  email_backends.py  middleware.py  routing.py  settings.py  urls.py  wsgi.py
backend/main/: admin.py  apps.py  s3.py  (+25 more)
(+473 files in other folders)
