[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Ezekiel Okebule",email = "jamesezekiel039@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref (==3.10.0)",
    "billiard (==4.2.1)",
    "celery (==5.4.0)",
    "click (==8.1.7)",
    "kombu (==5.3.4)",
    "vine (==5.1.0)",
    "attrs (==25.4.0)",
    "autobahn (==25.10.2)",
    "automat (==25.4.16)",
    "boto3 (==1.40.64)",
    "botocore (==1.40.64)",
    "certifi (==2025.10.5)",
    "cffi (==2.0.0)",
    "channels (==4.3.1)",
    "channels-redis (==4.3.0)",
    "charset-normalizer (==3.4.4)",
    "constantly (==23.10.4)",
    "cryptography (==46.0.3)",
    "daphne (==4.2.1)",
    "django (==5.2.7)",
    "django-cors-headers (==4.9.0)",
    "django-filter (==25.1)",
    "djangorestframework (==3.16.1)",
    "djangorestframework-simplejwt (==5.5.1)",
    "drf-spectacular (==0.28.0)",
    "google-auth (==2.35.0)",
    "gunicorn (==23.0.0)",
    "hyperlink (==21.0.0)",
    "idna (==3.11)",
    "incremental (==24.7.2)",
    "inflection (==0.5.1)",
    "jmespath (==1.0.1)",
    "jsonschema (==4.25.1)",
    "jsonschema-specifications (==2025.9.1)",
    "msgpack (==1.1.2)",
    "packaging (==25.0)",
    "psycopg2-binary (==2.9.11)",
    "pyasn1 (==0.6.1)",
    "pyasn1-modules (==0.4.2)",
    "pycparser (==2.23)",
    "pyjwt (==2.10.1)",
    "pyopenssl (==25.3.0)",
    "python-dateutil (==2.9.0.post0)",
    "python-decouple (==3.8)",
    "python-dotenv (==1.2.1)",
    "pyyaml (==6.0.3)",
    "redis (==7.0.1)",
    "referencing (==0.37.0)",
    "requests (==2.32.5)",
    "rpds-py (==0.28.0)",
    "s3transfer (==0.14.0)",
    "service-identity (==24.2.0)",
    "setuptools (==80.9.0)",
    "six (==1.17.0)",
    "sqlparse (==0.5.3)",
    "twisted (==25.5.0)",
    "txaio (==25.9.2)",
    "typing-extensions (==4.15.0)",
    "uritemplate (==4.2.0)",
    "urllib3 (==2.5.0)",
    "whitenoise (==6.11.0)",
    "zope-interface (==8.0.1)",
    "exponent-server-sdk (>=1.0.0)",
    "firebase-admin (>=6.0.0)",
    "webauthn (>=1.2.1)",
    "stripe (>=12.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
